fix contact-me-bg display on mobile

--- a/docs/styles/header.css
+++ b/docs/styles/header.css
@@ -343,7 +343,7 @@ nav {
   background-image: url(../assets/city-bg-1.jpg);
   background-position: center;
   background-attachment: fixed;
-  background-size: cover;
+  background-size: auto;
 
   z-index: -200;
 
